--- a/meta-bsp/recipes-fsl/mcore-demos/README
+++ b/meta-bsp/recipes-fsl/mcore-demos/README
@@ -4,7 +4,8 @@ The M4 demo app version of each SoCs are followed:
 * 1.0.1 -- i.MX 7D
 
 The M7 demo app version of each SoCs are followed:
-* 2.13.0 -- i.MX 8MNULite, 8MN, 8MP
+* 2.13.0 -- i.MX 8MNULite, 8MN
+* 2.13.1 -- i.MX 8MP
 
 The M33 demo app version of each SoCs are followed:
 * 2.13.1 -- i.MX 93
