--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-i.MX Linux Yocto Project BSP 5.15.X_1.0.0 Release
+i.MX Linux Yocto Project BSP 5.15.32_2.0.0 Release
 =====================================================
 
 Note this is release is not a production release.
@@ -30,7 +30,7 @@ Quick Start Guide
 See the i.MX Yocto Project User's Guide for instructions on installing repo.
 
 First install the i.MX Linux BSP repo
-$: repo init -u git://source.codeaurora.org/external/imx/imx-manifest.git -b imx-linux-honister -m imx-5.15.X-1.0.0.xml
+$: repo init -u https://github.com/nxp-imx/imx-manifest.git -b imx-linux-kirkstone -m imx-5.15.32-2.0.0.xml
 
 Download the Yocto Project Layers:
 $: repo sync
