--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-i.MX Linux Yocto Project BSP 6.1.1_1.0.0 Release
+i.MX Linux Yocto Project BSP 6.1.22_2.0.0 Release
 =====================================================
 
 Note this is release is not a production release.
@@ -31,7 +31,7 @@ Quick Start Guide
 See the i.MX Yocto Project User's Guide for instructions on installing repo.
 
 First install the i.MX Linux BSP repo
-$: repo init -u git://github.com/nxp-imx/imx-manifest.git -b imx-linux-langdale -m imx-6.1.1-1.0.0.xml
+$: repo init -u git://github.com/nxp-imx/imx-manifest.git -b imx-linux-mickledore -m imx-6.1.22-2.0.0.xml
 
 Download the Yocto Project Layers:
 $: repo sync
