mcore-demos/READM: Update imx93 mcore version [YOCIMX-7014]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/recipes-fsl/mcore-demos/README
+++ b/meta-bsp/recipes-fsl/mcore-demos/README
@@ -8,5 +8,4 @@ The M7 demo app version of each SoCs are followed:
 * 2.13.1 -- i.MX 8MP
 
 The M33 demo app version of each SoCs are followed:
-* 2.13.1 -- i.MX 93
-* 2.14.0 -- i.MX 8ULP
+* 2.14.0 -- i.MX 8ULP,i.MX 93
