mcore-demos/README: Update imx8mp mcore package to v2.14.1 [YOCIMX-7225]
Signed-off-by: Zelan Zou <zelan.zou@nxp.com>

--- a/meta-bsp/recipes-fsl/mcore-demos/README
+++ b/meta-bsp/recipes-fsl/mcore-demos/README
@@ -4,7 +4,8 @@ The M4 demo app version of each SoCs are followed:
 * 1.0.1 -- i.MX 7D
 
 The M7 demo app version of each SoCs are followed:
-* 2.14.0 -- i.MX 8MNULite, 8MN,i.MX 8MP
+* 2.14.0 -- i.MX 8MNULite, 8MN
+* 2.14.1 -- i.MX 8MP
 
 The M33 demo app version of each SoCs are followed:
 * 2.14.1 -- i.MX 8ULP i.MX 93
