--- a/meta-bsp/recipes-fsl/mcore-demos/README
+++ b/meta-bsp/recipes-fsl/mcore-demos/README
@@ -1,5 +1,6 @@
 The M4 demo app version of each SoCs are followed:
-* 2.14.0 -- i.MX 7ULP, 8MQ, 8MM
+* 2.14.0 -- i.MX 7ULP, 8MQ
+* 2.14.1 -- i.MX 8MM
 * 2.9.0 -- i.MX 8DXL, 8QM, 8QXP
 * 1.0.1 -- i.MX 7D
 
